@startuml 推荐模块类图
skinparam backgroundColor #FEFEFE
skinparam defaultFontName Microsoft YaHei
skinparam defaultFontSize 11
skinparam classAttributeIconSize 0

title 推荐模块类图

class StoreupEntity {
    - Long id
    - Long userid
    - Long refid
    - String tablename
    - String name
    - String picture
    - String type
    - String inteltype
    + get/set methods
}

class UserBasedCollaborativeFiltering {
    - Map<String, Map<String, Double>> userRatings
    - Map<String, List<String>> itemUsers
    - Map<String, Integer> userIndex
    - Map<Integer, String> indexUser
    - Long[][] sparseMatrix
    + UserBasedCollaborativeFiltering(userRatings)
    + buildItemUsers(): void
    + buildSparseMatrix(): void
    + calculateSimilarity(user1, user2): double
    + recommendItems(targetUser, num): List<String>
}

class KechengxinxiController {
    + page(params): R
    + list(params): R
    + autoSort(params): R
    + autoSort2(params): R
}

class NewsController {
    + page(params): R
    + autoSort(params): R
    + autoSort2(params): R
    + thumbsup(id, type): R
}

interface StoreupService {
    + queryPage(params): PageUtils
    + selectList(wrapper): List<StoreupEntity>
    + insert(entity): int
}

interface KechengxinxiService {
    + queryPage(params): PageUtils
    + selectById(id): KechengxinxiEntity
}

class KechengxinxiEntity {
    - Long id
    - String kechengmingcheng
    - String jiaolian
    - Integer storeupnum
    - Date clicktime
    + get/set methods
}

class NewsEntity {
    - Long id
    - String title
    - String typename
    - Integer clicknum
    - Integer thumbsupnum
    - Integer storeupnum
    + get/set methods
}

KechengxinxiController --> UserBasedCollaborativeFiltering
KechengxinxiController --> StoreupService
KechengxinxiController --> KechengxinxiService
NewsController --> StoreupService

StoreupService --> StoreupEntity
KechengxinxiService --> KechengxinxiEntity

StoreupEntity --> KechengxinxiEntity : "收藏课程"
StoreupEntity --> NewsEntity : "收藏公告"

UserBasedCollaborativeFiltering --> StoreupEntity : "分析收藏数据"

@enduml
